--- a/src/ui/components/layout/PageLayout/PageLayout.scss
+++ b/src/ui/components/layout/PageLayout/PageLayout.scss
@@ -56,6 +56,7 @@
   }
 
   ion-title {
+    padding: 0;
     text-align: center;
   }
 
@@ -63,10 +64,6 @@
   ion-progress-bar::part(progress) {
     height: 6px;
     border-radius: 6px;
-  }
-
-  ion-title {
-    padding: 0;
   }
 
   .page-footer ion-button {
