--- a/src/ui/pages/Crypto/Crypto.scss
+++ b/src/ui/pages/Crypto/Crypto.scss
@@ -73,10 +73,10 @@
 }
 
 .crypto-assets-transactions {
-  bottom: calc(8vh + 1px);
+  bottom: calc(8vh + 1px + var(--ion-safe-area-bottom));
 
   &.md {
-    bottom: calc(8vh + 13px);
+    bottom: calc(8vh + 0.75rem + 1px);
   }
 
   .modal {
